# cmake-testing-grounds

./: README.md
.github/workflows/: cmake.yml
learning-cmake/part1/: CMakeLists.txt  main.cpp
learning-cmake/part1/configure/: about.txt
learning-cmake/part1/resources/: greeting.txt
learning-sfml/sfml-intro/setup-manual/sfml-cmake-setup/: .gitignore  CMakeLists.txt  main.cpp
learning-sfml/sfml-intro/setup-manual/sfml-manual-setup/: sfml-manual-setup.sln  sfml-manual-setup.vcxproj
